k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-agent-fe
  labels:
    app: ai-agent-fe
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
  selector:
    app: ai-agent-fe
